--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,16 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
+    compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.android.support:gridlayout-v7:25.1.1'
     compile 'org.jsoup:jsoup:1.10.2'
+
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:25.1.1'
 
     testCompile 'junit:junit:4.12'
 }
