--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:25.1.1'
 
+    compile 'com.annimon:stream:1.1.5'
+
     testCompile 'junit:junit:4.12'
 }
