Added RecipeDetailsActivty and Fragment - Pulls data from database - Pulls data from web if does not exist in database
RecipeDetailsActivity is launched from RecipeListActivity utilizing a Callback from RecipesListFragment
- For master-flow view in tablets

Updated RecipeDbHelper
- Changed data type for favorite in database to Integer set to either 0 or 1 for equivalen boolean values
- Added LinkTable._ID so that ingredients are displayed in order they are added in table

Created NonScrollingRecyclerView to place ingredients inside RecipeDetailsActivity without the scrolling behavior

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="project.hnoct.kitchen">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -19,12 +20,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <provider
-            android:authorities="project.hnoct.kitchen"
-            android:name=".data.RecipeProvider"
-            android:exported="false"
-            android:enabled="true" />
 
+        <provider
+            android:name=".data.RecipeProvider"
+            android:authorities="project.hnoct.kitchen"
+            android:enabled="true"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.RecipeDetailsActivity"
+            android:label="@string/title_activity_recipe_details"
+            android:parentActivityName=".ui.RecipeListActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+        </activity>
     </application>
 
 </manifest>
