UI update and bug fixes
Added IngredientOrder to the Link Table to ensure ingredients are shown in correct order

Modified and added several methods in Utilities
- formatRating now utilizes Unicode for black star instead of drawable star
- Made getIngredientQuantity more robust to handle different ingredients measurements and formatting
- Created generateAllRecipesUrlFromRecipeId for obtaining URL for a recipe given its recipeId
- Created convertToUnicodeFraction to replace String fractions with their Unicode equivalents in quantities
- Created setRecipeFavorite to set favorite-status of a recipe in the database
- Created getDirectionList for separating each direction from the entire String of directions
- Created abbreviateMeasurements to abbreviate measurements
- Created formatAuthor for formatting Author with by-line
- Created generateNewId to generate new IDs for recipes and ingredients that already exist in the database, but whose names don't match

Updated AllRecipeAsyncTask
- Provides a Callback method for alerting the UI that it has finished loading so UI can properly update
- Generates new IDs if ingredient already exists in database

Updated AllRecipesListAsyncTask
- Generates new ID if recipe already exists in database
- Changed method for obtaining time for DateAdded Column

Updated RecipeDetailsActivity and Fragment
- Properly loads into new layouts
- Created new Adapters for ingredients and directions
- Created NonScrollingRecyclerView because layout requires multiple RecyclerViews
- Made Toolbar transparent, will add opacity and animation later

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".ui.RecipeDetailsActivity"
             android:label="@string/title_activity_recipe_details"
             android:parentActivityName=".ui.RecipeListActivity"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.TransparentToolbar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
