--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,16 @@
                 android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
         </activity>
         <activity
-            android:name=".ui.SettingsActivity"
+            android:name=".prefs.SettingsActivity"
             android:label="@string/title_activity_settings"
+            android:parentActivityName=".ui.RecipeListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+        </activity>
+        <activity
+            android:name=".ui.SettingsActivity2"
+            android:label="@string/title_activity_settings2"
             android:parentActivityName=".ui.RecipeListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
