Updated AllRecipeAsyncTask to be more robust - Retrieves primary recipe information if recipe is not found in database - Will be used for directly adding recipes via URL

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
         </activity>
+        <activity
+            android:name=".ui.CreateRecipeActivity"
+            android:label="@string/title_activity_create_recipe"
+            android:parentActivityName=".ui.RecipeListActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+        </activity>
     </application>
 
 </manifest>
