Started work on CreateRecipeActivity - Autosave user input complete - Adding works properly and saves a copy Context.MODE_PRIVATE for application use - AddIngredientAdapter is broken - getAdapterPosition() does not work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
             android:name=".ui.CreateRecipeActivity"
             android:label="@string/title_activity_create_recipe"
             android:parentActivityName=".ui.RecipeListActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
