Started work on allowing user to create recipe books and organize their recipes within it - Modified RecipeContract to include entries for a recipe_books, chapters, and recipe_book_link tables - Updated RecipeDbHelper to create the new tables - **In progress** Working on updating RecipeProvider to be compatible for queries, insertions, deletions, and updates to the new tables - Created RecipeBookActivity for accessing recipe books
Refactored LinkEntry to LinkIngredientEntry to avoid confusion with the new LinkRecipeBookEntry

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
         </activity>
+        <activity
+            android:name=".ui.RecipeBookActivity"
+            android:label="@string/title_activity_recipe_book"
+            android:parentActivityName=".ui.RecipeListActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+        </activity>
     </application>
 
 </manifest>
