Continued work on getting the RecipeBookActivity and ChapterActivity working - Created RecipeBookAdapter for displaying recipe books within the RecyclerView - Created RecipeBookDetailsDialog for entering and altering the information of the RecipeBook - Created ChapterActivity for displaying the Chapters of the RecipeBook - Updated RecipeContract to allow for descriptions within the RecipeBook
Updated names for dimensions to be more applicable to the layouts they apply to

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
         </activity>
+        <activity
+            android:name=".ui.ChapterActivity"
+            android:label="@string/title_activity_chapter"
+            android:parentActivityName=".ui.RecipeBookActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="project.hnoct.kitchen.ui.RecipeBookActivity" />
+        </activity>
     </application>
 
 </manifest>
