--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.RecipeListActivity"
+            android:name=".ui.ActivityRecipeList"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -31,58 +31,67 @@
             android:exported="false" />
 
         <activity
-            android:name=".ui.RecipeDetailsActivity"
+            android:name=".ui.ActivityRecipeDetails"
             android:label="@string/title_activity_recipe_details"
-            android:parentActivityName=".ui.RecipeListActivity"
+            android:parentActivityName=".ui.ActivityRecipeList"
             android:theme="@style/AppTheme.TransparentToolbar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+                android:value="project.hnoct.kitchen.ui.ActivityRecipeList" />
         </activity>
         <activity
             android:name=".prefs.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".ui.RecipeListActivity">
+            android:parentActivityName=".ui.ActivityRecipeList">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+                android:value="project.hnoct.kitchen.ui.ActivityRecipeList" />
         </activity>
         <activity
-            android:name=".ui.CreateRecipeActivity"
+            android:name=".ui.ActivityCreateRecipe"
             android:label="@string/title_activity_create_recipe"
-            android:parentActivityName=".ui.RecipeListActivity"
+            android:parentActivityName=".ui.ActivityRecipeList"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateHidden|adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+                android:value="project.hnoct.kitchen.ui.ActivityRecipeList" />
         </activity>
         <activity
-            android:name=".ui.FavoritesActivity"
+            android:name=".ui.ActivityFavorites"
             android:label="@string/title_activity_favorites"
-            android:parentActivityName=".ui.RecipeListActivity"
+            android:parentActivityName=".ui.ActivityRecipeList"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+                android:value="project.hnoct.kitchen.ui.ActivityRecipeList" />
         </activity>
         <activity
-            android:name=".ui.RecipeBookActivity"
+            android:name=".ui.ActivityRecipeBook"
             android:label="@string/title_activity_recipe_book"
-            android:parentActivityName=".ui.RecipeListActivity"
+            android:parentActivityName=".ui.ActivityRecipeList"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="project.hnoct.kitchen.ui.RecipeListActivity" />
+                android:value="project.hnoct.kitchen.ui.ActivityRecipeList" />
         </activity>
         <activity
-            android:name=".ui.ChapterActivity"
+            android:name=".ui.ActivityChapter"
             android:label="@string/title_activity_chapter"
-            android:parentActivityName=".ui.RecipeBookActivity"
+            android:parentActivityName=".ui.ActivityRecipeBook"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="project.hnoct.kitchen.ui.RecipeBookActivity" />
+                android:value="project.hnoct.kitchen.ui.ActivityRecipeBook" />
+        </activity>
+        <activity
+            android:name=".ui.ActivityMyRecipes"
+            android:label="@string/title_activity_my_recipes"
+            android:parentActivityName=".ui.ActivityRecipeList"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="project.hnoct.kitchen.ui.ActivityRecipeList" />
         </activity>
     </application>
 
