Added ability to modify recipe book details from ActivityRecipeBook
Soft-keyboard now automatically hides when user is finished editing chapter information

Fixed bug preventing chapters from adding more than 1 recipe.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
             android:name=".ui.ActivityRecipeBook"
             android:label="@string/title_activity_recipe_book"
             android:parentActivityName=".ui.ActivityRecipeList"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden|adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="project.hnoct.kitchen.ui.ActivityRecipeList" />
