--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:gridlayout-v7:25.1.1'
+    compile 'com.google.android.gms:play-services-gcm:10.2.4'
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.1'
