Refactor RecipeListAsyncTasks as Services
App will be converted to run the Service in the background using
GCMTaskService throughout the day instead of when the app is run. This
will work to prevent data from getting stale and show a more fluid UI
as the newest recipes will already be loaded upon app start instead of
being updated while the user is looking at the app.

Fixed a small bug where recipes imported from Epicurious utilizing
placeholder images, but having actual an actual image when the details
are loaded would cause an infinite loop as a new recipe is generated
that doesn't match the recipeSourceId loaded into ActivityRecipeDetails.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="project.hnoct.kitchen.ui.ActivityRecipeList" />
         </activity>
+        <service android:name=".sync.AllRecipesService" />
+        <service android:name=".sync.EpicuriousService" />
+        <service android:name=".sync.FoodDotComService" />
+        <service android:name=".sync.SeriousEatsService" />
     </application>
 
 </manifest>
