Refactor RecipeSyncService due to ambiguity
RecipeSyncService extends GcmTaskService so it has been renamed to
RecipeGcmService to reduce the ambiguity in its name and allow for a
future class to use the name RecipeSyncService

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,7 +108,7 @@
         <service android:name=".sync.EpicuriousService" />
         <service android:name=".sync.FoodDotComService" />
         <service android:name=".sync.SeriousEatsService" />
-        <service android:name=".sync.RecipeSyncService"
+        <service android:name=".sync.RecipeGcmService"
             android:permission="com.google.android.gms.permission.BIND_NETWORK_TASK_SERVICE"
             android:exported="true" >
             <intent-filter>
