Update layout and functionality of AddRecipeDialog
Previously, the dialog merely showed a list of recipes to the user,
making it difficult to select a specific recipe they had in mind.
Options for filtering by favorites, custom-recipes, and searching by
name were added to the layout to make it easier to narrow down recipes
the user would like to add to the recipe book.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,7 +82,8 @@
             android:name=".ui.ActivityChapter"
             android:label="@string/title_activity_chapter"
             android:parentActivityName=".ui.ActivityRecipeBook"
-            android:theme="@style/AppTheme.Chapter">
+            android:theme="@style/AppTheme.Chapter"
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="project.hnoct.kitchen.ui.ActivityRecipeBook" />
