Replace icon assets
Replaced icon assets with material design icons with a default white
color. Icons that require color have individual assets that correspond
to their requirements.

*Courtesy of https://romannurik.github.io/AndroidAssetStudio/index.html

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
             android:name=".ui.ActivityRecipeBook"
             android:label="@string/title_activity_recipe_book"
             android:parentActivityName=".ui.ActivityRecipeList"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.RecipeBooks"
             android:windowSoftInputMode="stateHidden|adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
