Add ability to backup and restore database
Added an option in SettingsActivity to allow the user to create a local
backup or create a backup that is uploaded to Google Drive. Also
includes options to restore from either of those locations. This will
allow the user to backup their favorites, custom recipes, and recipe
books across multiple devices and guard against catastrophic failure.

Will be implementing a sync feature in later builds that will allow the
user to have their database synced across multiple devices.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,6 +127,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="project.kitchen.ui.ActivityRecipeList" />
         </activity>
+        <activity android:name=".prefs.BackupRestoreActivity"
+            android:label="@string/pref_backup_title"
+            android:parentActivityName=".prefs.SettingsActivity"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="project.kitchen.BACKUP_AND_RESTORE_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
