--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
@@ -43,6 +46,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:gridlayout-v7:25.1.1'
     compile 'com.google.android.gms:play-services-gcm:10.2.4'
+    compile 'com.google.android.gms:play-services-drive:10.2.4'
+    compile 'com.google.apis:google-api-services-drive:v3-rev74-1.22.0'
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.1'
